--- a/src/app/components/nav-ba/nav-ba.component.html
+++ b/src/app/components/nav-ba/nav-ba.component.html
@@ -3,5 +3,6 @@
   <div class="menu">
     <a routerLink="one">Component One</a>
     <a routerLink="two">Component Two</a>
+    <a routerLink="cart">Cart</a>
   </div>
 </div>
